--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -41,6 +41,6 @@
         android:layout_alignLeft="@+id/edit_button"
         android:layout_alignStart="@+id/edit_button"
         android:layout_centerVertical="true"
-        android:text="Delete" />
+        android:text="Delete List" />
 
 </RelativeLayout>
